# RustyChat

./: Cargo.toml  README.md
src/: codec.rs  lib.rs  message.rs  peer.rs  shared.rs  types.rs
