[package]
name = "networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = { version = "0.1"}

tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }

futures = { version = "0.3.0", features = ["thread-pool"]}
tui = "0.18.0"
crossterm = "0.24.0"
serde_json = "1.0.83"
serde = "1.0.142"
serde_derive = "1.0.142"

[[example]]
name = "server"
path = "src/bin/server.rs"

[[example]]
name = "client"
path = "src/bin/client.rs"

[[example]]
name = "main"
path = "src/main.rs"
